EDU-472 Enable copying sections into clipboard

--- a/src/components/section-display.less
+++ b/src/components/section-display.less
@@ -90,11 +90,8 @@
   flex-direction: column;
 }
 
-.SectionDisplay-actionTooltipTitle {
-  margin-bottom: 5px;
-}
-
 .SectionDisplay-actionTooltipSubtext {
+  margin-top: 5px;
   font-size: 11px;
 }
 
