EDU-472 Enable pasting sections from clipboard

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -81,6 +81,7 @@
 @import '../components/admin/storage-plans-tab.less';
 @import '../components/byte-input.less';
 @import '../components/timeline.less';
+@import '../components/plugin-selector-dialog.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
