EDU-491 Small UI improvements

--- a/src/components/news-tab.less
+++ b/src/components/news-tab.less
@@ -16,6 +16,7 @@
 
 .NewsTab-activity {
   display: grid;
+  font-size: 13px;
   grid-gap: @news-tab-activity-grid-gap;
   align-items: center;
   grid-auto-flow: column;
@@ -41,6 +42,7 @@
 }
 
 .NewsTab-activityMetadataIcon {
+  font-size: 18px;
   color: @edu-text-color;
 }
 
