--- a/src/styles/antd-style-overrides.less
+++ b/src/styles/antd-style-overrides.less
@@ -1,4 +1,5 @@
-.ant-checkbox-inner, .ant-checkbox-checked::after {
+.ant-checkbox-inner,
+.ant-checkbox-checked::after {
   border-radius: @edu-border-radius-boxy;
 }
 
@@ -20,6 +21,10 @@
 .ant-input[disabled],
 .ant-input-number-disabled {
   .disabled-input-style();
+}
+
+.ant-tabs-tab {
+  color: @edu-tabs-color;
 }
 
 .ant-btn.ant-btn-link {
