--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -71,7 +71,8 @@
 @edu-table-selected-row-bg: @edu-text-color;
 @edu-table-footer-color: @edu-text-color;
 @edu-card-head-color: @edu-content-title-color;
-@edu-tabs-ink-bar-color: @edu-text-color;
+@edu-tabs-color: @edu-text-color-secondary;
+@edu-tabs-ink-bar-color: @edu-text-color-secondary;
 @edu-tabs-highlight-color: @edu-text-color;
 @edu-tabs-hover-color: @edu-text-color;
 @edu-alert-message-color: @edu-text-color;
