--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -88,6 +88,7 @@
 @import '../styles/panel.less';
 @import '../styles/avatar.less';
 @import '../styles/info-cell.less';
+@import '../styles/breadcrumbs.less';
 
 
 // Plugin styles
