--- a/src/plugins/image-tiles/image-tiles.less
+++ b/src/plugins/image-tiles/image-tiles.less
@@ -3,18 +3,17 @@
 .ImageTiles {
 }
 
-.ImageTiles-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+.ImageTiles-grid {
+  display: grid;
+  align-items: start;
+  gap: 20px;
   margin-left: auto;
   margin-right: auto;
 }
 
-.ImageTiles-tilesContainer {
-  flex: 1 0 0%;
-  padding: 10px;
+.ImageTiles-tile {
   text-align: center;
+  overflow-x: hidden;
 }
 
 .ImageTiles-img {
