EDU-507 Add interactive-media plugin

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -105,3 +105,4 @@
 @import '../plugins/ear-training/ear-training.less';
 @import '../plugins/diagram-net/diagram-net.less';
 @import '../plugins/pdf-viewer/pdf-viewer.less';
+@import '../plugins/interactive-media/interactive-media.less';
