--- a/src/components/plugin-selector-dialog.less
+++ b/src/components/plugin-selector-dialog.less
@@ -6,10 +6,5 @@
 }
 
 .PluginSelectorDialog-pasteButton {
-  display: inline-block;
-  padding-left: 10px;
-
-  @media @edu-media-phone {
-    display: none;
-  }
+  .m-icon-button;
 }
