EDU-477 Add new table plugin

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -106,3 +106,4 @@
 @import '../plugins/diagram-net/diagram-net.less';
 @import '../plugins/pdf-viewer/pdf-viewer.less';
 @import '../plugins/interactive-media/interactive-media.less';
+@import '../plugins/table/table.less';
