--- a/src/plugins/annotation/annotation.less
+++ b/src/plugins/annotation/annotation.less
@@ -1,15 +1,31 @@
-.Annotation {
+@annotation-padding: 16px;
 
-  &.Annotation--confirm .ant-collapse-header {
-    background-color: green;
-    border-radius: 8px 8px 0 0;
-  }
-}
+.Annotation {}
 
 .Annotation-header {
   display: flex;
   align-items: center;
   gap: @edu-content-padding;
+  padding: 12px @annotation-padding;
+  border-radius: @edu-border-radius-base;
+  border: 1px solid @edu-border-color-light;
+  background-color: @edu-background-color-light;
+
+  &.is-above-content {
+    border-radius: @edu-border-radius-base @edu-border-radius-base 0 0;
+  }
+}
+
+.Annotation-headerArrow {
+  display: inline-block;
+  font-size: 12px;
+  margin-right: 0;
+  margin-left: auto;
+  transition: all 0.3s ease;
+
+  &.is-rotated-downwards {
+    transform: rotate(90deg);
+  }
 }
 
 .Annotation-intentIcon {
@@ -17,9 +33,18 @@
 }
 
 .Annotation-content {
-  display: flex;
-  align-items: center;
-  gap: @edu-content-padding;
+  padding: @annotation-padding;
+  border: 1px solid @edu-border-color-light;
+  border-radius: 0 0 @edu-border-radius-base @edu-border-radius-base;
+  border-top: none;
+
+  &.Annotation-content--standalone {
+    display: flex;
+    align-items: center;
+    gap: @edu-content-padding;
+    border-radius: @edu-border-radius-base;
+    border: 1px solid @edu-border-color-light;
+  }
 }
 
 .Annotation-contentIntentIcon {
