--- a/src/styles/panel.less
+++ b/src/styles/panel.less
@@ -6,7 +6,7 @@
 .Panel {
   background-color: @edu-background-color-light;
   border: 1px solid @panel-border-color;
-  border-radius: 4px;
+  border-radius: @edu-border-radius-base;
   width: 100%;
   margin: 0;
   transition: border-color 0.5s ease-in-out;
@@ -28,6 +28,7 @@
 
 .Panel-content {
   background-color: @edu-white;
+  border-radius: @edu-border-radius-base;
   position: relative;
   padding: 24px;
 
