NOTICKET: Set annotation header color to text color, otherwise link color is applied

--- a/src/plugins/annotation/annotation.less
+++ b/src/plugins/annotation/annotation.less
@@ -17,6 +17,7 @@
   align-items: center;
   overflow-x: hidden;
   text-decoration: none;
+  color: @edu-text-color;
   gap: @edu-content-padding;
   padding: 12px @annotation-padding;
   border-radius: @edu-border-radius-base;
