NOTICKET: Set annotation header hover color to text color, otherwise link hover color is applied (d'ooh)

--- a/src/plugins/annotation/annotation.less
+++ b/src/plugins/annotation/annotation.less
@@ -24,6 +24,12 @@
   border: 1px solid @edu-border-color-light;
   background-color: @edu-background-color-light;
 
+  &:hover,
+  &:active,
+  &:visited {
+    color: @edu-text-color;
+  }
+
   &.is-above-content {
     border-radius: @edu-border-radius-base @edu-border-radius-base 0 0;
   }
