--- a/src/plugins/annotation/annotation.less
+++ b/src/plugins/annotation/annotation.less
@@ -69,9 +69,10 @@
 
 .AnnotationDisplay-intentIcon {
   font-size: 16px;
+  display: flex;
 
   &.AnnotationDisplay-intentIcon--standalone {
-    font-size: 30px;
+    font-size: 28px;
     align-self: center;
   }
 }
