--- a/src/plugins/interactive-media/interactive-media.less
+++ b/src/plugins/interactive-media/interactive-media.less
@@ -1,3 +1,28 @@
 .InteractiveMediaDisplay {}
 
-.InteractiveMediaEditor {}
+.InteractiveMediaEditor {
+  position: relative;
+}
+
+.InteractiveMediaEditor-overlay {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 60%;
+  background-color: @edu-background-color-light;
+  z-index: @edu-z-index-sticky-content-layer;
+}
+
+.InteractiveMediaEditor-overlaySpinner {
+  position: absolute;
+  top: 40%;
+  width: 100%;
+  height: 100%;
+  font-weight: bold;
+  z-index: @edu-z-index-sticky-content-layer;
+}
