EDU-504 Highlight active row or column

--- a/src/plugins/table/table.less
+++ b/src/plugins/table/table.less
@@ -66,6 +66,11 @@
   &.TableDesigner-tableCell--cellTypeBody {
     .TableDisplay-cell.TableDisplay-cell--body;
   }
+
+  &.is-active {
+    border-color: @edu-secondary-color-dark !important;
+    background-color: @edu-secondary-color-light !important;
+  }
 }
 
 .TableDesigner-contentInput {
