EDU-531 Determine media duration

--- a/src/plugins/interactive-media/interactive-media.less
+++ b/src/plugins/interactive-media/interactive-media.less
@@ -26,3 +26,7 @@
   font-weight: bold;
   z-index: @edu-z-index-sticky-content-layer;
 }
+
+.InteractiveMediaEditor-hiddenPlayerContainer {
+  display: none;
+}
