EDU-530 Support chapter editing

--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -37,6 +37,10 @@
   white-space: nowrap;
   border-right: 1px dotted @timeline-segments-bar-color;
 
+  &.is-selected {
+    background-color: @edu-secondary-color-dark;
+  }
+
   &:last-of-type {
     border-right: none;
   }
