--- a/src/plugins/interactive-media/interactive-media.less
+++ b/src/plugins/interactive-media/interactive-media.less
@@ -4,6 +4,26 @@
   position: relative;
 }
 
+.InteractiveMediaEditor-timeline {
+  margin: 30px 0;
+}
+
+.InteractiveMediaEditor-chapterSelector {
+  display: flex;
+  gap: 10px;
+  width: 250px;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 auto 10px auto;
+}
+
+.InteractiveMediaEditor-selectedChapterTitle {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .InteractiveMediaEditor-overlay {
   position: absolute;
   display: flex;
