--- a/src/plugins/audio/audio.less
+++ b/src/plugins/audio/audio.less
@@ -1,1 +1,11 @@
-.Audio {}
+.AudioDisplay {}
+
+.AudioDisplay-content {
+  margin: 0 auto;
+}
+
+.AudioDisplay-text {
+  padding-top: 20px;
+  font-size: 12px;
+  text-align: center;
+}
