--- a/src/plugins/video/video.less
+++ b/src/plugins/video/video.less
@@ -1,33 +1,10 @@
-.Video {}
+.VideoDisplay {}
 
-.Video-players {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.VideoDisplay-content {
+  margin: 0 auto;
 }
 
-.Video-mainPlayerContainer {
-
-  &.Video-mainPlayerContainer--noDisplay {
-    width: 0;
-    height: 0;
-    overflow: hidden;
-  }
-}
-
-.Video-mainPlayerOuter {
-  position: relative;
-}
-
-.Video-mainPlayerInner {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.VideoDisplay-mediaControlContainer {}
-
-.Video-text {
+.VideoDisplay-text {
   padding-top: 20px;
   font-size: 12px;
   text-align: center;
