--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -82,8 +82,8 @@
 @edu-table-selected-row-background-color: @edu-selection-background-color;
 @edu-progress-default-color: fade(@edu-primary-color-light, 60%);
 // Colors - slider
-@edu-slider-rail-background-color: @edu-background-color-light;
-@edu-slider-rail-background-color-hover: @edu-background-color-base;
+@edu-slider-rail-background-color: @edu-background-color-base;
+@edu-slider-rail-background-color-hover: darken(@edu-background-color-base, 5%);
 @edu-slider-track-background-color: tint(@edu-primary-color-light, 40%);
 @edu-slider-track-background-color-hover: tint(@edu-primary-color-light, 20%);
 @edu-slider-dot-border-color: @edu-background-color-base;
