EDU-530 Extract track component from media player

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -81,6 +81,7 @@
 @import '../components/timeline.less';
 @import '../components/plugin-selector-dialog.less';
 @import '../components/media-player.less';
+@import '../components/media-player-track.less';
 @import '../components/media-player-controls.less';
 
 // Pure CSS components
