EDU-536 Use media player in interactive media plugin display

--- a/src/plugins/interactive-media/interactive-media.less
+++ b/src/plugins/interactive-media/interactive-media.less
@@ -1,5 +1,15 @@
 .InteractiveMediaDisplay {}
 
+.InteractiveMediaDisplay-content {
+  margin: 0 auto;
+}
+
+.InteractiveMediaDisplay-text {
+  padding-top: 20px;
+  font-size: 12px;
+  text-align: center;
+}
+
 .InteractiveMediaEditor {
   position: relative;
 }
