--- a/src/styles/utilities.less
+++ b/src/styles/utilities.less
@@ -21,7 +21,7 @@
   transition: all .2s ease-in-out;
 }
 
-.u-img-color-flip:hover {
+.u-img-color-flip:not(.u-img-color-flip-disabled):hover {
   filter: grayscale(0%);
   transform: scale(1.05);
 }
