--- a/src/components/admin/settings-tab.less
+++ b/src/components/admin/settings-tab.less
@@ -15,3 +15,10 @@
 .SettingsTab-saveButton {
   margin-top: 30px;
 }
+
+.SettingsTab-templateDocument {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+}
