EDU-544 Show error message when image load fails for main image

--- a/src/plugins/image/image.less
+++ b/src/plugins/image/image.less
@@ -1,5 +1,10 @@
 .ImageDisplay {}
 
+.ImageDisplay-errorMessage {
+  text-align: center;
+  color: @edu-error-color;
+}
+
 .ImageDisplay-mainImage {
   display: block;
   margin: 0 auto;
