--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -84,6 +84,7 @@
 @import '../components/media-player-track.less';
 @import '../components/media-player-controls.less';
 @import '../components/media-range-selector.less';
+@import '../components/files-grid-viewer.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
