--- a/src/components/files-grid-viewer.less
+++ b/src/components/files-grid-viewer.less
@@ -1,3 +1,7 @@
+@files-grid-viewer-file-icon-padding: 10px;
+@files-grid-viewer-file-container-base-width: 60px;
+@files-grid-viewer-file-container-total-width: @files-grid-viewer-file-container-base-width + 2 * @files-grid-viewer-file-icon-padding;
+
 .FilesGridViewer {
   display: flex;
   gap: 20px;
@@ -9,7 +13,7 @@
 }
 
 .FilesGridViewer-fileContainer {
-  width: 60px;
+  width: @files-grid-viewer-file-container-total-width;
   overflow: hidden;
   white-space: nowrap;
   text-decoration: none;
@@ -21,18 +25,18 @@
     text-decoration: none;
     color: @edu-text-color;
   }
+
+  &:hover {
+    font-weight: bold;
+
+    .FilesGridViewer-fileIcon {
+      font-size: 65px;
+      padding-top: 5px;
+    }
+  }
 }
 
-.FilesGridViewer-file {
-  height: 60px;
-  background-color: yellow;
-}
-
-.FilesGridViewer-navigateToParentButton {
-  display: flex;
-  align-items: baseline;
-}
-
-.FilesGridViewer-navigateToParentIcon {
-  transform: rotate(90deg);
+.FilesGridViewer-fileIcon {
+  font-size: 60px;
+  padding: @files-grid-viewer-file-icon-padding;
 }
