EDU-546 Create and use editor for selecting the media range

--- a/src/styles/utilities.less
+++ b/src/styles/utilities.less
@@ -37,3 +37,10 @@
 .u-hidden {
   visibility: hidden;
 }
+
+.u-input-and-button {
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: 1fr auto;
+  gap: @edu-button-spacing;
+}
