--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -83,6 +83,7 @@
 @import '../components/media-player.less';
 @import '../components/media-player-track.less';
 @import '../components/media-player-controls.less';
+@import '../components/media-range-selector.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
