EDU-545 Show chapter markers in media player progress bar

--- a/src/components/media-player-controls.less
+++ b/src/components/media-player-controls.less
@@ -9,6 +9,7 @@
       .ant-slider-rail {
         background-color: darken(@edu-background-color-base, 5%);
       }
+
       &:hover {
         .ant-slider-rail {
           background-color: darken(@edu-background-color-base, 20%);
@@ -28,6 +29,16 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+}
+
+.MediaPlayerControls-progressSlider {
+  .ant-slider-mark-text {
+    font-size: 11px;
+  }
+
+  .ant-slider-with-marks {
+    margin-bottom: 20px;
+  }
 }
 
 .MediaPlayerControls-volumeSlider {
