EDU-558 Center media player

--- a/src/plugins/anavis/anavis.less
+++ b/src/plugins/anavis/anavis.less
@@ -1,7 +1,7 @@
 @anavis-part-border-color: #111;
 @anavis-part-inner-border-color: rgba(255, 255, 255, 0.2);
 @anavis-part-inner-border-color-selected: #000;
-@anavis-part-inner-background-gradient: linear-gradient(to bottom, rgba(255,255,255,0.2) 0%, rgba(0,0,0,0.2) 100%);
+@anavis-part-inner-background-gradient: linear-gradient(to bottom, rgba(255, 255, 255, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%);
 @anavis-vertical-spacing: 0.5em;
 
 .AnavisDisplay {}
@@ -67,7 +67,9 @@
   overflow: hidden;
 }
 
-.AudioDisplay-players {
+.AnavisDisplay-players {
+  .m-horizontally-centered;
+
   margin-top: 0.5em;
 }
 
