--- a/src/plugins/audio/audio.less
+++ b/src/plugins/audio/audio.less
@@ -1,7 +1,8 @@
 .AudioDisplay {}
 
 .AudioDisplay-content {
-  margin: 0 auto;
+  .u-width-50;
+  .m-horizontally-centered;
 }
 
 .AudioDisplay-text {
