--- a/src/plugins/ear-training/ear-training.less
+++ b/src/plugins/ear-training/ear-training.less
@@ -1,5 +1,10 @@
 .EarTraining {}
 
+.EarTraining-soundPlayer {
+  .u-width-50;
+  .m-horizontally-centered;
+}
+
 .EarTraining-testWrapper {
   margin: 0 auto;
   max-width: 100%;
