EDU-558 Do not use dynamic-intent mixin for static width

--- a/src/plugins/ear-training/ear-training.less
+++ b/src/plugins/ear-training/ear-training.less
@@ -1,8 +1,8 @@
 .EarTraining {}
 
 .EarTraining-soundPlayer {
-  .u-width-50;
   .m-horizontally-centered;
+  width: 50%;
 }
 
 .EarTraining-testWrapper {
