EDU-561 Extract PDF display component

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -84,6 +84,8 @@
 @import '../components/media-player-controls.less';
 @import '../components/media-range-selector.less';
 @import '../components/files-grid-viewer.less';
+@import '../components/pdf-document.less';
+@import '../components/mini-pager.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
