EDU-552 Create files list viewer component

--- a/src/styles/antd-variable-overrides.less
+++ b/src/styles/antd-variable-overrides.less
@@ -585,11 +585,11 @@
 // // Table
 // // --
 // @table-bg: @component-background;
-// @table-header-bg: @background-color-light;
 @table-header-color: @edu-table-header-color;
-// @table-header-sort-bg: @background-color-base;
-// @table-body-sort-bg: #fafafa;
-// @table-row-hover-bg: @background-color-light;
+@table-header-bg: @edu-background-color-light;
+@table-header-sort-bg: @edu-background-color-light;
+@table-body-sort-bg: inherit;
+@table-row-hover-bg: @edu-table-row-hover-bg;
 // @table-selected-row-color: inherit;
 @table-selected-row-bg: @edu-table-selected-row-background-color;
 // @table-body-selected-sort-bg: @table-selected-row-bg;
