--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -69,6 +69,7 @@
 @edu-label-color: @edu-content-title-color;
 @edu-table-header-color: @edu-content-title-color;
 @edu-table-selected-row-bg: @edu-text-color;
+@edu-table-row-hover-bg: @background-color-light;
 @edu-table-footer-color: @edu-text-color;
 @edu-card-head-color: @edu-content-title-color;
 @edu-tabs-color: @edu-text-color-secondary;
