--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -86,6 +86,7 @@
 @import '../components/files-grid-viewer.less';
 @import '../components/pdf-document.less';
 @import '../components/mini-pager.less';
+@import '../components/files-list-viewer.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
