--- a/src/styles/antd-style-overrides.less
+++ b/src/styles/antd-style-overrides.less
@@ -47,3 +47,7 @@
 .ant-select-disabled.ant-select:not(.ant-select-customize-input) .ant-select-selector {
   .disabled-input-checked-style();
 }
+
+.ant-table-thead th.ant-table-column-sort::before {
+  background-color: @edu-border-color-light  !important;
+}
