EDU-565 Eliminate media controls jump due to markers

--- a/src/components/media-player-controls.less
+++ b/src/components/media-player-controls.less
@@ -38,12 +38,10 @@
 }
 
 .MediaPlayerControls-progressSlider {
+  height: 35px;
+
   .ant-slider-mark-text {
     font-size: 11px;
-  }
-
-  .ant-slider-with-marks {
-    margin-bottom: 20px;
   }
 }
 
