EDU-554 Add more metadata and PDF preview

--- a/src/components/file-preview.less
+++ b/src/components/file-preview.less
@@ -53,3 +53,16 @@
   display: block;
   font-size: 18em;
 }
+
+.FilePreview-pdf {
+  display: flex;
+  flex-direction: column;
+}
+
+.FilePreview-pdfDocument {
+  flex: 0 1 0%;
+}
+
+.FilePreview-pdfPager {
+  flex: none;
+}
