EDU-554 Switch styles using em to use px

--- a/src/components/file-preview.less
+++ b/src/components/file-preview.less
@@ -14,8 +14,8 @@
 .FilePreview-previewArea {
   grid-row: 2;
   grid-column: 1;
-  padding: 1em;
-  height: 24em;
+  padding: @edu-content-padding;
+  height: 340px;
   border-radius: @edu-border-radius-boxy;
   border: 1px solid @edu-border-color-light;
   background-color: @edu-background-color-light;
@@ -31,12 +31,12 @@
 }
 
 .FilePreview-detailLabel {
-  font-size: 85%;
+  font-size: 90%;
   font-weight: bold;
 }
 
 .FilePreview-detailValue {
-  margin-bottom: .75em;
+  margin-bottom: 14px;
 
   &:last-child {
     margin-bottom: unset;
@@ -51,7 +51,7 @@
 
 .FilePreview-icon {
   display: block;
-  font-size: 18em;
+  font-size: 12em;
 }
 
 .FilePreview-pdf {
