--- a/src/components/section-display.less
+++ b/src/components/section-display.less
@@ -63,13 +63,13 @@
 
   &.SectionDisplay-actionButton--edit,
   &.SectionDisplay-actionButton--preview {
-    color: @green-8;
+    color: @edu-green-icon-color;
 
     &:hover,
     &:active,
     &:focus {
-      color: @green-8;
-      border-color: @green-8;
+      color: @edu-green-icon-color;
+      border-color: @edu-green-icon-color;
     }
   }
 
