--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -46,6 +46,7 @@
 @edu-content-title-color: #000000;
 @edu-border-color-base: #BCBCBC;
 @edu-border-color-light: #E8E8E8;
+@edu-green-icon-color: @green-8;
 
 @edu-apply-color: @green-4;
 @edu-success-color: @green-7;
